# TFG_2024-2025

./: README.md  install_libraries_folder.ipynb  red_streets.py  show_json.py
json/central/: cafeteria_central_smooth.json  cafeteria_central_smooth_min.json
json/comedor/: comedor_universidad.json  comedor_universidad_adjusted.json  (+2 more)
python_files/: install_libraries_folder.ipynb  red_streets.py  show_json.py
tfg_project/: README.md  pyproject.toml  report.md
tfg_project/db/: chroma.sqlite3
tfg_project/knowledge/: aulario_1.json  aulario_2.json  aulario_3.json  aulario_4.json  aulario_5.json  cafeteria_cae.json  cafeteria_central.json  cafeteria_humanidades.json  cafeteria_humanidades_info.json  cafeteria_volumen_final.json  cafeteria_volumen_final_corrected.json  comedor_ual.json  jueves.json  map_info.json  miercoles.json  volumen_cafeteria_fixed.json
tfg_project/knowledge/aulas/: aulario_5.json
tfg_project/knowledge/cafeterias/: Starbucks_corners.json  cafeteria_central.json  comedor_ual.json
tfg_project/knowledge/parking/: domingo.json  jueves.json  lunes.json  martes.json  miercoles.json  sabado.json  viernes.json
tfg_project/src/tfg_project/: crew.py  main.py
tfg_project/src/tfg_project/config/: agents.yaml  files.py  tasks.yaml
tfg_project/src/tfg_project/tools/: custom_tool.py
tfg_proyect/: README.md  pyproject.toml  report.md
tfg_proyect/knowledge/: cafeteria_central_smooth_min.json  comedor_universidad_adjusted.json
tfg_proyect/src/tfg_proyect/: crew.py  main.py
tfg_proyect/src/tfg_proyect/config/: agents.yaml  tasks.yaml
(+10 files in other folders)
