[project]
name = "tfg_proyect"
version = "0.1.0"
description = "tfg_proyect using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.102.0,<1.0.0"
]

[project.scripts]
tfg_proyect = "tfg_proyect.main:run"
run_crew = "tfg_proyect.main:run"
train = "tfg_proyect.main:train"
replay = "tfg_proyect.main:replay"
test = "tfg_proyect.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
